dashboard table: - move action column width calculation into data-table-source; - fix paddings and cropping; - fix counter on manage column button.

--- a/frontend/src/app/components/dashboard/db-table/db-table.component.css
+++ b/frontend/src/app/components/dashboard/db-table/db-table.component.css
@@ -115,27 +115,29 @@
 }
 
 .db-table ::ng-deep .mat-cell,
-.db-table ::ng-deep .mat-header-cell {
+.db-table ::ng-deep .mat-header-cell,
+.db-table ::ng-deep .mat-footer-cell {
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgba(0, 0, 0, 0.12);
-    min-width: min-content;
+    padding-right: 24px;
 }
 
-.db-table ::ng-deep .mat-cell:not(:first-of-type),
-.db-table ::ng-deep .mat-header-cell:not(:first-of-type) {
-    padding-left: 12px;
+.db-table ::ng-deep .mat-cell:first-of-type,
+.db-table ::ng-deep .mat-header-cell:first-of-type,
+.db-table ::ng-deep .mat-footer-cell:first-of-type {
+    padding-left: 24px;
+    padding-right: 24px;
 }
-
-/* .table-cell-content_cropped {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    max-width: 250px;
-} */
 
 th.mat-header-cell, td.mat-cell {
     padding-right: 20px;
+}
+
+.table-cell-content {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 tr.mat-row {
@@ -150,18 +152,15 @@ tr.mat-row:hover {
     background: #e0e0e0;
     padding-left: 16px;
     padding-right: 16px !important;
-    /* width: 124px; */
 }
 
 .spinner-wrapper {
     position: absolute;
     top: 56px; left: 0;
     display: flex;
-    /* align-items: center; */
     justify-content: center;
     background: rgba(255, 255, 255, 0.9);
     height: calc(100% - 112px);
-    /* padding-top: 2%; */
     width: 100%;
     z-index: 2;
 }
